# spread

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  spread_visulization.py
docs/: cli.md  criteria.md  index.md  test.yaml  testing.md
docs/contributions/: how_to_contribute.md
examples/: mock1.json  mock2.json  test.yaml  test2.yaml  user_prompt.txt
examples/regex/: regex_prompt.txt  test3.yaml
src/: TestCase.py  controllers.py  main.py  middleware.py  test.py  utils.py
